# housing_data_extract

./: README.md  Truncate_housing_tables.sql.dbquery.ipynb  delta_utils.py  main.py  predict_sales_price.py  pyproject.toml  requirements.txt  scrape_housing_data.py  scrape_latest_sales_prices.py  scrape_listings.py  utils.py
.backup_databricks_version/: README.md
.backup_databricks_version/src/: Extract listed houses.py
app/: app.py
app/.databricks/sync-snapshots/: 6c46547355315516.json
data/: housing.duckdb
data_extract/: get_housing.py  get_skoler.py
data_extract/housing/: __init__.py  scrape_latest_sales_prices.py  scrape_listings.py
data_extract/skoler/: __init__.py  overblik.py
docs/: extraction-update-log.md  projekt-forklaring.md
extract/: Extract Sold houses.py  Extract listed houses.py  utils.py
src/: Extract listed houses.py  Transform Listings.py
transform/: Transform Listings.py  utils.py
